cleanup, add xmobar-0.11.1

--- a/README
+++ b/README
@@ -6,8 +6,8 @@ This is my  gentoo overlay where I stored my personal ebuild.
 
 First off all download this repo in your home directory:
 
-   git clone git://github.com/lucapostregna/lucapost-overlay.git ~/
+   git clone git://github.com/lucapostregna/lucapost-overlay.git
 
 Add this line to /etc/make.conf:
   
-   PORTDIR_OVERLAY="/home/username/lucapost-overlay"
+   PORTDIR_OVERLAY="/path/to/lucapost-overlay"
