--- a/README
+++ b/README
@@ -1,13 +1,11 @@
 # Readme
 
-This is my  gentoo overlay where I stored my personal ebuild.
+lucapost gentoo overlay
 
 ## Install
 
 First off all download this repo in your home directory:
-
-   git clone git://github.com/lucapostregna/lucapost-overlay.git
+     git clone git://github.com/lucapostregna/lucapost-overlay.git
 
 Add this line to /etc/make.conf:
-  
-   PORTDIR_OVERLAY="/path/to/lucapost-overlay"
+     PORTDIR_OVERLAY="/path/to/lucapost-overlay"
