--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Readme
 
-This is lucapost gentoo overlay, for ebuild not in portage.
+This is lucapost gentoo overlay, for ebuild out of official portage.
 
 ## Install
 
